--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -916,7 +916,22 @@ In diesem Abschnitt wurden verschiedene Ansätze zur User Assistance im Allgemei
 \section{Zusammenfassung}
 \label{section:standderforschung:zusammenfassung}
 
-yay
+% szenario
+
+% anforderungsanalyse
+
+% grundlagen: cruise, semantische daten, infovis, user assistance
+
+% verwandte arbeiten: mashups, visualisierungstools, user assistance
+
+% was ist der wissenschaftliche mehrwert? --> woher weiß ich das überhaupt, wenn das konzept erst später kommt? soll ich die lücken beschreiben, die ich später schließe? wahrscheinlich.
+
+% bedienung, weil automatisch generiert wird, was für den zweck der user assistance bis jetzt neuartig ist. die siggraph typen haben es quasi gemacht "weils geht" oder für storytelling oder was weiß ich. webb2012 haben die handgefertigt.
+% kommunikation? weiß nicht... die prinzipien sind dieselben wie im icwe paper
+% verlinkung, weil das bis jetzt noch nicht viele zu bedacht haben scheinen
+% kommentare, weil entweder haben die leute die komponenten selbst geschrieben oder sie wurden nicht an den daten selbst (sondern der visualisierung) gespeichert und konnten nicht wiederverwendet werden
+% history, weil komponenten black boxes, is bei choosel zb nicht so gewesen.
+% meta-hilfe... keine ahnung. zwar wird tbr für arme eingesetzt, aber ob das jetzt so wissenschaftlichen mehrwert bietet?
 
 % ###################################################
 \chapter{Konzeption}
@@ -927,7 +942,7 @@ Basierend auf dem Szenario (Abschnitt~\ref{section:standderforschung:szenario}),
 \section{Einführung}
 \label{section:konzeption:einfuehrung}
 
-Blublublu
+Blublublu\todo{:/}
 
 \subsection{Rollenmodell}
 \label{section:konzeption:einfuehrung:rollenmodell}
@@ -2055,13 +2070,13 @@ Für die History müssen folgende Attribute enthalten sein:
 \subsubsection{Context Service}
 
 \begin{itemize}
-	\item Domäne des Benutzers (Kommentare, Meta-Hilfe)
+	\item Alter, Aufenthaltsort, Geschlecht, Domäne des Benutzers (Kommentare, Meta-Hilfe)
 \end{itemize}
 
 \subsubsection{CRUISe}
 
 \begin{itemize}
-	\item Jede Operation muss ein Event feuern und Zustandsveränderungen dürfen nur mit Operationen durchgeführt werden (History).
+	\item Jedes Event muss eine Nachricht schicken (History)
 \end{itemize}
 
 \section{Zusammenfassung}
