--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -1965,7 +1965,7 @@ Nun stellt sich die Frage, welche Daten für das maschinelle Lernen herangezogen
    \label{figure:meta-dyn-id}
 \end{figure}
 
-Das Hilfesystem schickt alle fünf Interaktionen einen solchen Datensatz an die Wissensbasis, welche ihn zu den Trainingsdaten hinzufügt. Außerdem wird der Datensatz an den Classifier weitergegeben, der das letzte Attribut vorhersagt. Ist das Ergebnis ein anderes als \enquote{Keine Hilfe nötig}, bietet das Hilfesystem dem Benutzer Hilfe zur entsprechenden Funktion an.
+Das Hilfesystem schickt alle fünf Interaktionen einen solchen Datensatz an die Wissensbasis, welche ihn zu den Trainingsdaten hinzufügt. Außerdem wird der Datensatz an den Classifier weitergegeben, der das letzte Attribut vorhersagt. Ist das Ergebnis ein anderes als \enquote{Keine Hilfe nötig}, bietet das Hilfesystem dem Benutzer Hilfe zur entsprechenden Funktion an. Damit die Wissensbasis einen initialen Classifier generieren kann, müssen zunächst auf die beschriebene Art und Testdaten gesammelt werden. Mit diesen kann die Wissensbasis einen ersten Classifier generieren und iterativ verbessern.
 
 \subsection{User Interface und Interaktion}
 
@@ -2115,7 +2115,8 @@ Für die History müssen folgende Attribute enthalten sein:
 \begin{itemize}
 	\item Warum jQuery + D3 + Backbone + MarionetteJS? 1. Ich hab schon mal was mit Backbone gemacht. 2. ExtJS arbeitet auf höherer Abstraktionsebene, man denkt dort in Panels, Listen, Fenstern und nicht in DIVs. Ich muss aber möglichst DOM-nah arbeiten, weil ich keine Annahmen über die Komponenten treffen kann. 3. Wegen 2. ist jQuery ExtJS vorzuziehen, DOM Manipulationen gehen hier schneller. 4. Meine UI ist jetzt nicht sehr kompliziert; runde Ecken und dunkler Hintergrund. Das kann man einfach "from scratch" bauen. Und weil ich nicht die Styles von Ext mit !importants überschreiben will, nehm ich gleich ein andres Framework. 5. Marionette nimmt ein bisschen Boilerplate Code weg und macht verschachtelte Views einfacher. 6. jQuery und D3 sind nötig, weil jQuery nur bedingt mit SVG umgehen kann (addClass(), width()...) und D3 sozusagen Markup-agnostisch ist. jQuery ist aber besser für Event Binding, weil D3 ja eigentlich Daten in Markup verwandelt. Mit ein bisschen Liebe (lies: jQuery Plugins) kann man später aber D3 auch sicher entfernen, denke ich.
 	\item Algorithmus fürs Highlighting der relevanten Elemente einer Aktion: Dunkle Folie drüber (div.vizboard-ground), VizRoot klonen, Elemente aus Klon löschen, Elemente aus Original durchgehen (Selektor), diese klonen und in VizRoot Klon einfügen. So ist man unabhängig von der eigentlichen DOM Struktur. Wenn der Selektor jetzt hunderte Elemente trifft, könnte das aber teuer werden, zugegeben. Dann hat man aber immer noch die Möglichkeit mit DocumentFragment zu arbeiten, wenn D3 bzw. jQuery das nicht eh intern benutzen.
-	
+	\item data-vizboard-copy Attribut um Selektor auf originale Komponente fahren und trotzdem die Kopien in vizboard-rootcopy finden zu können. Das ist wichtig für Selektoren wie nth-child-of(odd) oder "ancestor child". Ich kopier ja nur die Elemente, die von den Selektoren getroffen werden, nicht alles ringsrum.
+	\item Im AddAnnotationView sind leider alle vier Werkzeuge zusammen anstatt 1 View pro Werkzeug. Grund: Alle müssen sichtbar sein (ausblenden einzelner Views nicht möglich), aufeinander abgestimmt (wie steht fest, welcher aktiv ist?) und funktionieren (kann zB nicht einzelne Views auf Gruppen arbeiten lassen, weil Gruppen keine pointer-events bekommen, wenn nix drin is).
 \end{itemize}
 
 %#####################################################
